# uoh-sqak-ex05

./: .env-example  .gitignore  .pre-commit-config.yaml  LICENSE  Plan.md  README.md  Todo.md  prd.md  pyproject.toml
.github/workflows/: ci.yml
config/: budgets.json  economics.json  hardware.json  lora.json  models.json  quant_levels.json  runtime.json
data/lora/: train.jsonl  valid.jsonl
diagrams/: block_diagram.mmd  class_diagram.mmd
docs/adr/: ADR-001-model-choice.md  ADR-002-airllm-honest-path.md  ADR-003-gatekeeper-design.md  ADR-004-serial-quant-sweep.md  ADR-005-ssd-streaming.md  ADR-006-mock-strategy.md  ADR-007-metrics-methodology.md  ADR-008-economics-assumptions.md  ADR-009-qlora-on-device.md
docs/prd/: mech-airllm.md  mech-baseline.md  mech-economics.md  mech-quant.md
experiments/: __init__.py  _common.py  airllm_run.py  baseline_llamacpp.py  baseline_oom.py  economics_run.py  extreme_airllm.py  probe.py  quant_sweep.py
reports/: airllm_constraint.md  research_questions.md  technical_report.md
scripts/: check_file_lines.py  check_version_sync.py  download_model.py  fill_submission_pdf.py  make_figures.py  make_lora_data.py  make_real_figures.py  run_benchmarks.py  run_lora.py
tests/: conftest.py  test_cli.py  test_config.py  test_economics.py  test_experiments.py  test_gatekeeper.py  test_llamabench.py  test_logging.py  test_lora_runner.py  test_metrics.py  test_mlx_lora_parser.py  test_no_raw_external_calls.py  test_paths.py  test_quant_sweep.py  test_realruns.py  test_runners.py  test_sdk.py  test_token_meter.py  test_version.py
(+48 files in other folders)
