[project]
name = "airbench"
description = "EX05 — Running a Massive LLM Locally: AirLLM, Quantization & Performance Benchmarking (uoh-sqak)"
authors = [
    { name = "Salah Qadah" },
    { name = "Andalus Kalash" },
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dynamic = ["version"]
dependencies = [
    "huggingface-hub>=0.25",
    "psutil>=6.0",
    "matplotlib>=3.9",
    "numpy>=2.0",
]

[project.optional-dependencies]
# Heavy runtime deps for the REAL experiments only. Tests/CI never install these
# (every heavy op is mocked) so the grader needs no GPU/model/key.
heavy = [
    "transformers>=4.44",
    "torch>=2.4",
    "airllm>=2.11",
    "llama-cpp-python>=0.3",
]

[project.scripts]
airbench = "airbench.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/airbench/shared/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/airbench"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=airbench --cov-report=term-missing"

[tool.coverage.run]
source = ["airbench"]
omit = ["tests/*", "*/fixtures/*"]

[tool.coverage.report]
fail_under = 85
